sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:13: error: not found: value etape
    etape += 1;
    ^